more packages (autovar)

--- a/packages.bib
+++ b/packages.bib
@@ -1,3 +1,19 @@
+@Manual{R-autovar,
+    title = {autovar: Automated Vector Autoregression Model Creation},
+    author = {Ando Emerencia},
+    year = {2018},
+    note = {R package version 0.2-4},
+}
+
+@Manual{R-autovarCore,
+    title = {autovarCore: Automated Vector Autoregression Models and Networks},
+    author = {Ando Emerencia},
+    year = {2018},
+    note = {R package version 1.0-4},
+    url = {https://CRAN.R-project.org/package=autovarCore},
+}
+
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
