--- a/book.bib
+++ b/book.bib
@@ -17,6 +17,7 @@
 }
 
 
+
 @misc{aph_qh,
   author = {{Amsterdam Public Health}},
   year = {2018},
@@ -291,6 +292,7 @@
   pmid            = {23157450},
 }
 
+
 @Book{Ekker2013,
   author   = {Anton Ekker and Barbara van Rest},
   title    = {{Medische apps, is certificeren nodig? In 7 stappen naar een CE-markering voor uw app}},
@@ -312,6 +314,21 @@
   keywords = {Ambulatory assessment,Child,Ecological momentary assessment,Electronic diary,Infancy,Motor development,Parent report},
   pmid     = {22648694},
 }
+
+
+@article{Emerencia2016,
+  author = {Emerencia, Ando Celino and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
+  doi = {10.1109/JBHI.2015.2402280},
+  isbn = {2168-2194 VO - 20},
+  issn = {21682194},
+  journal = {IEEE Journal of Biomedical and Health Informatics},
+  keywords = {Vector autoregression,electronic patient diary data,statistical software,time series analysis},
+  pmid = {25680221},
+  title = {{Automating Vector Autoregression on Electronic Patient Diary Data}},
+  year = {2016}
+}
+
+
 
 @Misc{Engel2016,
   author        = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
