--- a/book.bib
+++ b/book.bib
@@ -833,6 +833,13 @@ year = {1999}
 }
 
 
+@book{sander2009,
+  title={Oxford companion to emotion and the affective sciences},
+  author={Sander, David and Scherer, Klaus},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
 @Misc{Scheffer2009,
   author        = {Scheffer, Marten and Bascompte, Jordi and Brock, William A. and Brovkin, Victor and Carpenter, Stephen R. and Dakos, Vasilis and Held, Hermann and {Van Nes}, Egbert H. and Rietkerk, Max and Sugihara, George},
   title         = {{Early-warning signals for critical transitions}},
